react-app/src/components/BusinessDetails/BusinessDetails.css
.where-reviews-will-go-probably{
    /* border: 2px solid red; */
    /* padding-top: 200px; */
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-right: 700px;
}

.main-container-business-details{
    height: 100%;
}

.bannerimage{
    width: 100%;
    height: 300px;
    background-color: gray;
    /* background: gray; */
    /* background-color: purple; */
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* position: relative; */
    /* -webkit-box-shadow: inset 0 0 10px 10px #000;
      -moz-box-shadow: inset 0 0 10px 10px #000; */
    box-shadow: inset 0 0 300px #000;
}

.business-name-h1{
    color: white;
    padding-top: 180px;
    display: flex;
    justify-content: center;
    font-size: 50px;
    font-weight: bold;
}

.business-name-h2{
    display: flex;
    justify-content: center;
    color: white;
    font-weight: bold;
    font-size: 20px;
}

.business-name-h2-two{
    display: flex;
    justify-content: center;
    color: white;
    padding-bottom: 3em;
    font-weight: bold;
    font-size: 20px;
}

.delete-edit-business-buttons-div{
    display: flex;
    justify-content: center;
    padding: 10px;
    gap: 30px;
    /* border: .1px solid rgb(194, 184, 184); */
    width: 18em;
    /* height: 1em; */
    padding-left: 50em;
    padding-bottom: 2em;
    /* margin-top: -45em; */
}

.business-delete-button{
    background: none;
    background-color: #c41200;
    border-radius: 3px;
    color: white;
    border: none;
    height: 4em;
    width: 10em;
}

.edit-business-button{
    background: none;
    background-color: #c41200;
    border-radius: 3px;
    color: white;
    border: none;
    height: 4em;
    width: 8em;
}

.details-contact-info-div{
    border: .1px solid gray;
    width: 18em;
    margin-left: 85em;
    /* padding-top: -43em; */
    position: sticky;
    top: 5px;
    /* padding-bottom: 100px; */
    /* padding-bottom: -500px; */
    margin-top: -18em;
    /* padding-bottom: 100px; */
    /* z-index: 1; */
    /* display:flex;
    justify-content: center;
    flex-direction: column; */
}

.details-contact-info-div-two{
    border: .1px solid gray;
    width: 18em;
    margin-left: 85em;
    /* padding-top: -43em; */
    position: sticky;
    top: 5px;
    /* padding-bottom: 100px; */
    /* padding-bottom: -500px; */
    margin-top: -38em;
    /* padding-bottom: 100px; */
    margin-bottom: 260px;
    /* z-index: 1; */
    /* display:flex;
    justify-content: center;
    flex-direction: column; */
}

.potential-map-location{
    display: flex;
    flex-direction: column;
    position: relative;
    bottom: 50px;
    top: 5px;
    margin-left: -15em;
    padding-top: 4em;
    padding-right: 100px;
    /* padding-bottom: 5em; */
    height: 8em;
    width: 8em;
    box-shadow: inset 0 0 300px #000;
}

.maps-p{
    color: white;
    font-weight: bold;
    margin-left: 4em;
    width: 8em;
}

.contact-info-ul{
    list-style: none;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.hours-info-ul{
    /* display: flex;
    flex-direction: column; */
    /* align-items: center; */

    display: grid;
    grid-column: auto auto;
    /* grid-row: auto auto; */
    padding-left: 400px;
    /* margin-top: -250px; */
    /* justify-content: center; */
    width: 25em;
    height: 40em;
}

.abcd-test-div{
    /* display: grid;
    grid-column: auto auto; */
    /* flex-direction: column; */
    /* align-items: center; */
    font-weight: bold;
    /* margin-top: 100px; */
    /* padding-bottom: .5em; */
    /* display: flex; */
    /* flex-direction: row; */
    width: 17em;
    list-style: none;
}

/* .abcd-test-p{
    margin-top: 50px;
} */

.contact-info-li{
    padding-right: 1em;
    font-size: .92em;
}

.contact-info-h2{
    display:flex;
    justify-content: center;
}

.contact-info-ul-hr{
    width: 17.9em;
    /* padding-left: 100px; */
    /* margin-right: 20px; */
    margin-left: -40px;
    display:flex;
    justify-content: center;
    /* font-weight: bold; */
}


.daily-hours-div{
    /* border: 2px solid black; */
    /* width: 18em; */
    display: flex;
    /* flex-direction: row; */
    align-items: center;
    width: 40em;
    /* justify-content: center; */
    /* height: 100vh; */
    /* flex-direction: row-reverse; */
}

.contact-info-div{
    /* display: flex; */
    width: 45em;
}

.address-single-div{
    display: flex;
    /* align-items: flex-end; */
    /* height: 10px; */
    font-weight: bold;
    padding-top: 15em;
}



.hours-li{
    font-weight: bold;
    padding-bottom: 20px;
    list-style: none;
    width: 20em;
}

.services-div{
    padding-top: 100px;
}

/* .contact-info-li{
    margin-right: 5em;
} */


.leave-review-button-div{
    /* display: flex; */
    /* justify-content: center; */
    padding-bottom: 4em;
    padding-top: -4em;
}

.business-details-reviews-div{
    padding-bottom: 3em;

    overflow-wrap: break-word;
    /* overflow: visible; */
    /* height: 5em; */
    /* width: 5em; */
    /* word-wrap: break-all; */
    /* white-space:wrap; */
    /* border: 1px solid black; */
}

.business-details-reviews-stars-li{
    list-style: none;
    padding-bottom: 2em;
}

.testing-review-location{
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 10em;
    width: 45em;
    padding-left: 30em;
}

.move-around-reviews-li-div{
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* width: 45em; */
}

.edit-review-link-business-details{
    /* margin-top: -2em; */
    text-decoration: none;
}

.edit-review-link-business-details-div{
    margin-top: -2em;
    width: 6em;
}

.edit-review-link-business-details-button{
    background: none;
    background-color: #c41200;
    border-radius: 3px;
    color: white;
    border: none;
    height: 2.5em;
    width: 8em;
    margin-bottom: 3em;

}

.review-prev-img{
    height: 6em;
    width: 6em;
}

.reviewer-name-p{
    font-weight: bold;
    font-size: 22px;
    /* padding-bottom:; */
}

.about-biz-hr-sep{
    /* margin-top: 12em; */
    width: 25em;
    padding-right: 15em;
}

.about-biz-hr-sep-two{
    width: 25em;
    padding-right: 15em;
}

.about-biz-h2{
    font-weight: bold;
    font-size: 30px;
}

.about-the-biz-div{
    padding-top: 20em;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;
    padding-bottom: 4em;
    width: 40em;
    padding-left: 22em;
}

.business-details-reviews-li-image-holder{
    display: flex;
    justify-content: center;
}

